fix overflow

--- a/src/app/modules/blogs-list/blogs-list.component.scss
+++ b/src/app/modules/blogs-list/blogs-list.component.scss
@@ -17,10 +17,6 @@ h1 {
   margin: 25px;
 }
 
-p {
-  max-height: 100px;
-  overflow: hidden;
-}
 
 button {
   background-color: #0053a3;
@@ -39,6 +35,8 @@ button {
 .card-body {
   width: 90%;
   margin: 5px auto;
+  max-height: 100px;
+  overflow: hidden;
 }
 
 .button-blog {
@@ -140,4 +138,9 @@ fa-icon {
   &:invalid {
     box-shadow: none;
   }
+}
+
+h2{
+  max-height: 100px;
+  overflow: hidden;
 }
